--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,16 @@ h1{
     font-size: 16px;
 }
 #dead{
-    position: absolute;
-    right: 0px;
-    width: 200px;
     font-family: Nevis;
     font-size: 16px;
+    position: absolute; 
+    left:50%; 
+    margin-left: -137px; 
+    top: 50%; 
+    margin-top: -130px;
+    height: 300px; 
+    width: 400px;
+    
 }
 #login__input{
     opacity: 0.7;filter:Alpha(Opacity=70);
