--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,17 @@ h1{
     
 }
 #help_animation{
-    position: absolute;
+/*    position: absolute;
     top: 50%;
     margin-left: 200px;
-    left: 50%;
+    left: 50%;*/
+    position: absolute;
+    top: 60%;
+    right: 50%;
+    z-index: 100;
+    width: 800px;
+    margin-right: -200px;
+    height: 200px;
 }
 #login__input{
     opacity: 0.7;filter:Alpha(Opacity=70);
@@ -264,11 +271,11 @@ li {
 @font-face {
     font-family: 'tellural_altbold';
     src: url('hmdvgbxs-webfont.eot');
-    src: url('hmdvgbxs-webfont.eot?#iefix') format('embedded-opentype'),
-    url('hmdvgbxs-webfont.woff2') format('woff2'),
-    url('hmdvgbxs-webfont.woff') format('woff'),
-    url('hmdvgbxs-webfont.ttf') format('truetype'),
-    url('hmdvgbxs-webfont.svg#tellural_altbold') format('svg');
+    src: url('hmdvgbxs-webfont.eot?#iefix') format('embedded-opentype');
+    src: url('hmdvgbxs-webfont.woff2') format('woff2');
+    src: url('hmdvgbxs-webfont.woff') format('woff');
+    src: url('hmdvgbxs-webfont.ttf') format('truetype');
+    src: url('hmdvgbxs-webfont.svg#tellural_altbold') format('svg');
     font-weight: normal;
     font-style: normal;
 
