--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,15 @@ h1{
     z-index: 100500;
 }
 
+#btn__hide {
+    position: absolute;
+    left: 20px;
+    top: 14px;
+    z-index:100502;
+    width: auto;
+    height: 5%;
+}
+
 #overlay_opacity {
     position: absolute; 
     left: 0px; 
@@ -173,7 +182,7 @@ li {
 }
 .garage_img{
     position: absolute;
-    top: 0px; left:0px; z-index: 11001001;
+    top: 0px; left:0px; z-index: 100501;
 }
 
 
